# final_project

./: .gitignore  .python-version  Dockerfile  LICENSE  README.md  example.json  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
notebooks/: EDA_feature_engineering.ipynb
src/: helpers.py  main.py
src/forest_competition/: __init__.py  create_pipeline.py  data.py  eda.py  evaluation.py  get_data.py  model.py  pipeline.py  predict.py  train.py
tests/: test_helper.py  test_hepler.py  test_train.py
