[tool.poetry]
name = "forest_competition"
version = "0.1.0"
description = "Solution for Forest Cover Type Prediction competition"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MeSugar/final_project"
repository = "https://github.com/MeSugar/final_project"
keywords = ["final project"]
authors = ["MeSugar <vlasov3454@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
pandas = "^1.4.2"
sklearn = "^0.0"
joblib = "^1.1.0"
pandas-profiling = "^3.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "forest_competition.train:train"
eda = "forest_competition.eda:create_eda"

