[tool.poetry]
name = "forest_competition"
version = "0.1.0"
description = "Solution for Forest Cover Type Prediction competition"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/MeSugar/final_project"
repository = "https://github.com/MeSugar/final_project"
keywords = ["forest competition"]
authors = ["MeSugar <vlasov3454@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
pandas = "^1.4.2"
sklearn = "^0.0"
joblib = "^1.1.0"
pandas-profiling = "^3.2.0"
mlflow = "^1.25.1"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
Boruta = "^0.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
Faker = "^13.11.1"
black = "^22.3.0"
mypy = "^0.950"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
train = "forest_competition.train:train"
predict = "forest_competition.predict:predict"
eda = "forest_competition.eda:eda"

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "sklearn.*",
    "boruta.*",
    "joblib.*",
    "mlflow.*",
    "faker.*",
    "numpy.*",
    "click.*",
    "pytest.*",
    "nox.*",
    "pandas_profiling.*",
    "fastapi.*",
    "forest_competition.train",
    "forest_competition.data"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = "ignore::UserWarning"